--- a/package.json
+++ b/package.json
@@ -3,13 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3006",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.5.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@types/react-slick": "^0.23.4",
+    "@types/shopify-buy": "^2.10.5",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "axios": "^0.21.1",
+    "cookies": "^0.8.0",
+    "cpf-cnpj-validator": "^1.0.3",
+    "framer-motion": "^4.1.3",
     "next": "10.1.3",
+    "nextjs-commerce-shopify": "^1.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-cookie": "^4.0.3",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-lorem-ipsum": "^1.4.9",
+    "react-slick": "^0.28.1",
+    "sass": "^1.33.0",
+    "scss": "^0.2.4",
+    "shopify-buy": "^2.11.0",
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "typescript": "^4.2.4"
   }
 }
